# powers-tool

./: .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  LICENSE  MANIFEST.in  Meters_README.md  README.md  README.zh-TW.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
docs/: CONTRIBUTING.md  migration-v2.md  release-checklist.md  testing-guidelines.md  workspace.md
docs/architecture/: monorepo-layout.md
docs/cli/: README.md  README.zh-TW.html  README.zh-TW.md  README_CLI_EN.md  USER_GUIDE.md  USER_GUIDE.zh-TW.html  USER_GUIDE.zh-TW.md  cli-integration.md
docs/contracts/: commands-parameter-contract.md  common-cli-jsonl-contract.md  common-orchestrator-workflows.md  common-worker-protocol.md  power-cli-jsonl-contract.md  power-orchestrator-workflows.md  power-worker-contract.md
docs/core/: README.md  README.zh-TW.md  integration.md  supported-models.md
docs/webui/: README.md  README.zh-TW.html  README.zh-TW.md  USER_GUIDE.md  USER_GUIDE.zh-TW.html  USER_GUIDE.zh-TW.md  Webui-README.md  localization-contract.md  web-ui-ai-change-rules.md  web-ui-change-rules.md
examples/: 01_list_resources.py  02_identify.py  ramp-list.json  safety-config.toml  sequence-readonly-edu.yaml  sequence-readonly.yaml  worker_orchestrator_smoke.ps1
scripts/: _validation_helpers.ps1  batch-validation.ps1  build_cli_exe.ps1  build_release.ps1  build_webui_exe.ps1  check_changed_whitespace.py  check_text_hygiene.py  e36312a_trigger_validation.py  live-cli-check.ps1  live-smoke-validation-check.ps1  no-hardware-regression.ps1  preflight-cli.ps1  preflight-smoke-validation.ps1  prepare-validation-environment.ps1  release-acceptance.ps1  resolve_validation_version.py  v2-release-acceptance.ps1  write-validation-installation-identity.py
src/keysight_power/: __init__.py  _scpi_preview.py  cli.py  cli_io.py  connection.py  errors.py  factory.py  models.py  safety.py  transport.py
src/keysight_power_cli/: cli.py  worker.py
src/keysight_power_core/: __init__.py  _scpi_preview.py  capabilities.py  command_runner.py  connection.py  core.py  discovery.py  electrical_ratings.py  factory.py  identity.py  instrument_io.py  live_support.py  model_enablement.py  model_resolution.py  models.py  operations.py  parameter_constraints.py  protection.py  ramp_list.py  readonly.py  restore.py  sequence.py  setpoint_limits.py  setpoint_ranges.py  snapshot.py  stop_cleanup.py  support_features.py  support_policy.py  transport.py  trigger.py  validation.py  workflow_validation.py
src/keysight_power_webui/: __init__.py  app.py  commands.py  launcher.py  server.py
src/powers_tool_cli/: __init__.py  candidate_capability.py  cli.py  cli_io.py  cli_parser.py  cli_rendering.py  lifecycle_client.py  request_primitives.py  runtime_mapping.py  worker.py
src/powers_tool_core/: __init__.py  _scpi_preview.py  build_profile.py  cancellation.py  capabilities.py  command_contract.py  command_runner.py  connection.py  core.py  discovery.py  electrical_ratings.py  factory.py  identity.py  instrument_io.py  live_support.py  model_enablement.py  model_metadata.py  (+21 more)
tests/: conftest.py  test_cli.py  test_cli_json_contract.py  test_connection.py  test_factory.py  test_generic_scpi_driver.py  test_import.py  test_model_drivers.py  test_models.py  test_safety.py  test_scpi_preview.py  test_simulator.py  test_transport.py
validation/: pyproject.toml  setup.py
validation/src/powers_tool_validation/: __init__.py  __main__.py  _runtime_trust.py  build_identity.py  candidate_capability.py  cli.py  installation_identity.py  runtime_extension.py
validation/tests/: inspect_validation_distribution.py  test_candidate_capability.py  test_clean_pre_visa_acceptance.py  test_installed_runtime_identity.py  test_same_version_wheel_replacement.py  test_validation_configuration.py  test_validation_runtime.py
(+170 files in other folders)
