[project]
name = "keysight-power-workspace"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/cli", "packages/webui"]

[tool.uv.sources]
keysight-power-core = { workspace = true }
keysight-power-cli = { workspace = true }
keysight-power-webui = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = [
  "packages/core/tests",
  "packages/cli/tests",
  "packages/webui/tests"
]
