[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "keysight-powers"
version = "1.0.0"
description = "Safe Python tooling for Keysight DC power supplies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Keysight Power contributors" },
]
dependencies = [
  "PyYAML>=6.0",
  "pyvisa>=1.14",
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
webui = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]
dev = [
  "build>=1.2",
  "fastapi>=0.100.0",
  "httpx>=0.28.1",
  "pytest>=8.0",
  "uvicorn>=0.23.0",
]
all = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]

[project.scripts]
keysight-power = "keysight_power_cli.cli:main"
keysight-power-webui = "keysight_power_webui.server:main"
keysight-power-webui-launcher = "keysight_power_webui.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "keysight_power_core*",
  "keysight_power_cli*",
  "keysight_power_webui*",
]

[tool.setuptools.package-data]
keysight_power_webui = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.tmp_pytest"
testpaths = ["tests"]
pythonpath = ["src"]
