[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "powers-tool"
version = "2.0.0"
description = "Safe vendor-neutral Python tooling for supported DC power supplies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Powers Tool contributors" },
]
dependencies = [
  "PyYAML>=6.0",
  "pyvisa>=1.14",
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
webui = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]
dev = [
  "build>=1.2",
  "fastapi>=0.100.0",
  "httpx2>=2.0",
  "pyinstaller>=6.11",
  "pytest>=8.0",
  "uvicorn>=0.23.0",
]
all = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]

[project.scripts]
powers-tool = "powers_tool_cli.cli:main"
powers-tool-webui = "powers_tool_webui.server:main"
powers-tool-webui-launcher = "powers_tool_webui.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "powers_tool_core*",
  "powers_tool_cli*",
  "powers_tool_webui*",
]

[tool.setuptools.package-data]
powers_tool_webui = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.tmp_pytest"
testpaths = ["tests"]
pythonpath = ["src"]
